Fix for code tags in the table to stop them from wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,10 @@ pre, code {
   border-radius: 4px;
 }
 
+td > code {
+  white-space: nowrap;
+}
+
 pre code {
   background: none !important;
   border: none;
